--- a/hi.html
+++ b/hi.html
@@ -3,130 +3,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 
 <body>
-    <style>
-        body {
-          font-family: 'Segoe UI', Arial, sans-serif;
-          background-color: #f0f4f8;
-          margin: 0;
-          padding: 20px;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          min-height: 100vh;
-        }
-        .container {
-          background-color: #ffffff;
-          padding: 30px;
-          border-radius: 12px;
-          box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
-          max-width: 700px;
-          width: 100%;
-          border: 1px solid #e0e6ed;
-        }
-        h1 {
-          text-align: center;
-          color: #2c3e50;
-          margin-bottom: 30px;
-          font-size: 28px;
-        }
-        .section {
-          margin-bottom: 25px;
-          padding: 20px;
-          background-color: #fafafa;
-          border-radius: 8px;
-          border: 1px solid #e0e6ed;
-          transition: all 0.3s ease;
-        }
-        .section:hover {
-          box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
-        }
-        #aiInputSection {
-          background-color: #f1faff;
-          border: 1px solid #b3d4fc;
-        }
-        h2 {
-          font-size: 20px;
-          color: #34495e;
-          margin-bottom: 15px;
-        }
-        select, input, textarea {
-          width: 100%;
-          padding: 12px;
-          margin-bottom: 15px;
-          border: 1px solid #ccd1d9;
-          border-radius: 6px;
-          box-sizing: border-box;
-          font-size: 16px;
-          transition: border-color 0.3s ease;
-        }
-        select:focus, input:focus, textarea:focus {
-          border-color: #3498db;
-          outline: none;
-        }
-        textarea {
-          min-height: 120px;
-          resize: vertical;
-        }
-        input[type="file"] {
-          padding: 5px 0;
-        }
-        label {
-          display: block;
-          margin-bottom: 5px;
-          color: #7f8c8d;
-          font-size: 14px;
-        }
-        button {
-          width: 100%;
-          padding: 14px;
-          background-color: #3498db;
-          color: #ffffff;
-          border: none;
-          border-radius: 6px;
-          cursor: pointer;
-          font-size: 18px;
-          font-weight: bold;
-          transition: background-color 0.3s ease;
-        }
-        button:hover {
-          background-color: #2980b9;
-        }
-        .step-container {
-          margin-top: 20px;
-          padding: 15px;
-          background-color: #f9fbfd;
-          border-left: 4px solid #3498db;
-          border-radius: 6px;
-          font-family: 'Courier New', monospace;
-          color: #2c3e50;
-          line-height: 1.6;
-        }
-        .step {
-          margin-bottom: 10px;
-        }
-        .step-title {
-          font-weight: bold;
-          color: #3498db;
-        }
-        .result {
-          margin-top: 20px;
-          padding: 15px;
-          background-color: #e8f8f5;
-          border-left: 4px solid #1abc9c;
-          border-radius: 6px;
-          font-weight: bold;
-          color: #186a3b;
-        }
-        .error {
-          background-color: #fce4e4;
-          border-left: 4px solid #e74c3c;
-          color: #c0392b;
-        }
-      </style>
+   
+      
     <div class="container">
         <h1>Physics Problem Solver</h1>
 
@@ -317,3 +200,144 @@
       const problemImage = document.getElementById("problemImage").files[0];
       let stepsText = "";
       let resultText = "";
+      if (problemDescription || problemImage) {
+        await solveWithAI(problemDescription, problemImage);
+        return;
+      }
+
+      const chapter = document.getElementById("chapterSelect").value;
+      if (!chapter) {
+        resultText = "Please select a chapter or provide a problem description/image.";
+        showResult(resultText, "", true);
+        return;
+      }
+
+      const problemType = document.getElementById(`${chapter}ProblemSelect`).value;
+      if (!problemType) {
+        resultText = "Please select a problem type.";
+        showResult(resultText, "", true);
+        return;
+      }
+      if (chapter === "optics") {
+        if (problemType === "lens" || problemType === "mirror") {
+          let u = parseFloat(document.getElementById("u").value);
+          let v = parseFloat(document.getElementById("v").value);
+          let f = parseFloat(document.getElementById("f").value);
+          if (!isNaN(u) && !isNaN(v)) {
+            f = 1 / ((1 / v) - (1 / u));
+            stepsText = `<div class="step">Using 1/f = 1/v - 1/u</div><div class="step">1/f = 1/${v} - 1/${u}</div>`;
+            resultText = `Focal length (f) = ${f.toFixed(2)} m`;
+          } else if (!isNaN(u) && !isNaN(f)) {
+            v = 1 / ((1 / f) + (1 / u));
+            stepsText = `<div class="step">Using 1/v = 1/f + 1/u</div><div class="step">1/v = 1/${f} + 1/${u}</div>`;
+            resultText = `Image distance (v) = ${v.toFixed(2)} m`;
+          } else if (!isNaN(v) && !isNaN(f)) {
+            u = 1 / ((1 / f) - (1 / v));
+            stepsText = `<div class="step">Using 1/u = 1/f - 1/v</div><div class="step">1/u = 1/${f} - 1/${v}</div>`;
+            resultText = `Object distance (u) = ${u.toFixed(2)} m`;
+          } else {
+            resultText = "Please provide two of: u, v, f.";
+            stepsText = "";
+        }
+    } else if (problemType === "snell") {
+          let n1 = parseFloat(document.getElementById("n1").value);
+          let theta1 = parseFloat(document.getElementById("theta1").value);
+          let n2 = parseFloat(document.getElementById("n2").value);
+          let theta2 = parseFloat(document.getElementById("theta2").value);
+          if (isNaN(n1) && !isNaN(theta1) && !isNaN(n2) && !isNaN(theta2)) {
+            n1 = (n2 * Math.sin(theta2 * Math.PI / 180)) / Math.sin(theta1 * Math.PI / 180);
+            stepsText = `<div class="step">Using n₁ sinθ₁ = n₂ sinθ₂</div><div class="step">n₁ = ${n2} sin(${theta2}) / sin(${theta1})</div>`;
+            resultText = `n₁ = ${n1.toFixed(2)}`;
+          } else if (isNaN(theta1) && !isNaN(n1) && !isNaN(n2) && !isNaN(theta2)) {
+            theta1 = Math.asin((n2 * Math.sin(theta2 * Math.PI / 180)) / n1) * 180 / Math.PI;
+            stepsText = `<div class="step">Using sinθ₁ = (n₂ sinθ₂) / n₁</div>`;
+            resultText = `θ₁ = ${theta1.toFixed(2)}°`;
+          } else {
+            resultText = "Provide three of: n₁, θ₁, n₂, θ₂.";
+          }
+        } else if (problemType === "magnification") {
+          let v = parseFloat(document.getElementById("v_mag").value);
+          let u = parseFloat(document.getElementById("u_mag").value);
+          if (!isNaN(v) && !isNaN(u)) {
+            let m = -v / u;
+            stepsText = `<div class="step">Using m = -v/u</div><div class="step">m = -${v} / ${u}</div>`;
+            resultText = `Magnification (m) = ${m.toFixed(2)}`;
+          } else {
+            resultText = "Please provide v and u.";
+          }
+        } else if (problemType === "lensmaker") {
+          let n = parseFloat(document.getElementById("n_lens").value);
+          let R1 = parseFloat(document.getElementById("R1").value);
+          let R2 = parseFloat(document.getElementById("R2").value);
+          if (!isNaN(n) && !isNaN(R1) && !isNaN(R2)) {
+            let f = 1 / ((n - 1) * ((1 / R1) - (1 / R2)));
+            stepsText = `<div class="step">Using 1/f = (n-1)(1/R₁ - 1/R₂)</div>`;
+            resultText = `Focal length (f) = ${f.toFixed(2)} m`;
+          } else {
+            resultText = "Please provide n, R₁, and R₂.";
+          }
+        }
+      } else if (chapter === "electricity") {
+        if (problemType === "ohm") {
+          let V = parseFloat(document.getElementById("V").value);
+          let I = parseFloat(document.getElementById("I").value);
+          let R = parseFloat(document.getElementById("R").value);
+          if (!isNaN(V) && !isNaN(I)) {
+            R = V / I;
+            stepsText = `<div class="step">Using V = IR</div><div class="step">R = ${V} / ${I}</div>`;
+            resultText = `Resistance (R) = ${R.toFixed(2)} Ω`;
+          } else if (!isNaN(V) && !isNaN(R)) {
+            I = V / R;
+            stepsText = `<div class="step">Using I = V/R</div>`;
+            resultText = `Current (I) = ${I.toFixed(2)} A`;
+          } else if (!isNaN(I) && !isNaN(R)) {
+            V = I * R;
+            stepsText = `<div class="step">Using V = IR</div>`;
+            resultText = `Voltage (V) = ${V.toFixed(2)} V`;
+          } else {
+            resultText = "Provide two of: V, I, R.";
+          }
+        } else if (problemType === "power") {
+          let V = parseFloat(document.getElementById("V_pow").value);
+          let I = parseFloat(document.getElementById("I_pow").value);
+          if (!isNaN(V) && !isNaN(I)) {
+            let P = V * I;
+            stepsText = `<div class="step">Using P = VI</div>`;
+            resultText = `Power (P) = ${P.toFixed(2)} W`;
+          } else {
+            resultText = "Provide V and I.";
+          }
+        } else if (problemType === "series") {
+          let R1 = parseFloat(document.getElementById("R1_ser").value);
+          let R2 = parseFloat(document.getElementById("R2_ser").value);
+          if (!isNaN(R1) && !isNaN(R2)) {
+            let R_total = R1 + R2;
+            stepsText = `<div class="step">Using R_total = R₁ + R₂</div>`;
+            resultText = `Total Resistance = ${R_total.toFixed(2)} Ω`;
+          } else {
+            resultText = "Provide R₁ and R₂.";
+          }
+        } else if (problemType === "parallel") {
+          let R1 = parseFloat(document.getElementById("R1_par").value);
+          let R2 = parseFloat(document.getElementById("R2_par").value);
+          if (!isNaN(R1) && !isNaN(R2)) {
+            let R_total = 1 / ((1 / R1) + (1 / R2));
+            stepsText = `<div class="step">Using 1/R_total = 1/R₁ + 1/R₂</div>`;
+            resultText = `Total Resistance = ${R_total.toFixed(2)} Ω`;
+          } else {
+            resultText = "Provide R₁ and R₂.";
+          }
+        }
+      } else if (chapter === "thermodynamics") {
+        if (problemType === "newton") {
+          let T_ambient = parseFloat(document.getElementById("T_ambient").value);
+          let T0 = parseFloat(document.getElementById("T0").value);
+          let k = parseFloat(document.getElementById("k").value);
+          let t = parseFloat(document.getElementById("time").value);
+          if (!isNaN(T_ambient) && !isNaN(T0) && !isNaN(k) && !isNaN(t)) {
+            let T = T_ambient + (T0 - T_ambient) * Math.exp(-k * t);
+            stepsText = `<div class="step">Using T(t) = Tₐ + (T₀ - Tₐ)e^(-kt)</div>`;
+            resultText = `Temperature (T) = ${T.toFixed(2)} °C`;
+          } else {
+            resultText = "Provide Tₐ, T₀, k, and t.";
+          }
