--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
   </div>
 
   <script>
-    const API_KEY = 'YOUR_GOOGLE_API_KEY_HERE'; // Replace with your actual Gemini API key
+    const API_KEY = 'AIzaSyDWDYMorCylhEfjhSUi-15HMI1A0Dzzk60'; 
 
     function showChapterOptions() {
       const chapter = document.getElementById("chapterSelect").value;
